# incread-test

./: CMakeLists.txt  driver.F90  module_read_netcdf.F90
cmake/: test_cubed_sphere_read_compiler_flags.cmake
